--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
 				<img src="img/cover.jpg">
 			</div>
 			<div class="g-30">
-				<img src="img/cover2.jpg">
+				<img src="img/cover2.JPG">
 			</div>
 			<div class="g-30">
-				<img src="img/cover3.jpg">
+				<img src="img/cover3.JPG">
 			</div>
 		</div>
 
 		<div class="g-row">
 			<div class="g-30">
-				<img src="img/cover4.jpg">
+				<img src="img/cover4.JPG">
 			</div>
 			<div class="g-30">
-				<img src="img/cover5.jpg">
+				<img src="img/cover5.JPG">
 			</div>
 			<div class="g-30">
 				<img src="img/cover6.jpg">
@@ -72,19 +72,19 @@
 
 		<div class="g-row">
 			<div class="g-30">
-				<img src="img/antenna.jpg">
+				<img src="img/antenna.JPG">
 			</div>
 			<div class="g-30">
-				<img src="img/antenna2.jpg">
+				<img src="img/antenna2.JPG">
 			</div>
 		</div>
 
 		<div class="g-row">
 			<div class="g-30">
-				<img src="img/antenna3.jpg">
+				<img src="img/antenna3.JPG">
 			</div>
 			<div class="g-30">
-				<img src="img/antenna4.jpg">
+				<img src="img/antenna4.JPG">
 			</div>
 		</div>
 	</section>
@@ -132,19 +132,19 @@
 
 		<div class="g-row">
 			<div class="g-30">
-				<img src="img/camera.jpg">
+				<img src="img/camera.JPG">
 			</div>
 			<div class="g-30">
-				<img src="img/camera2.jpg">
+				<img src="img/camera2.JPG">
 			</div>
 		</div>
 
 		<div class="g-row">
 			<div class="g-30">
-				<img src="img/camera3.jpg">
+				<img src="img/camera3.JPG">
 			</div>
 			<div class="g-30">
-				<img src="img/camera4.jpg">
+				<img src="img/camera4.JPG">
 			</div>
 		</div>
 	</section>
@@ -162,19 +162,19 @@
 
 		<div class="g-row">
 			<div class="g-30">
-				<img src="img/cables.jpg">
+				<img src="img/cables.JPG">
 			</div>
 			<div class="g-30">
-				<img src="img/cables2.jpg">
+				<img src="img/cables2.JPG">
 			</div>
 			<div class="g-30">
-				<img src="img/cables3.jpg">
+				<img src="img/cables3.JPG">
 			</div>
 		</div>
 
 		<div class="g-row">
 			<div class="g-30">
-				<img src="img/cables4.jpg">
+				<img src="img/cables4.JPG">
 			</div>
 			<div class="g-30">
 				<img src="img/cables5.jpg">
