--- a/index.html
+++ b/index.html
@@ -102,19 +102,19 @@
 
 		<div class="g-row">
 			<div class="g-30">
-				<img src="img/marking.jpg">
+				<img src="img/marking.JPG">
 			</div>
 			<div class="g-30">
-				<img src="img/marking2.jpg">
+				<img src="img/marking2.JPG">
 			</div>
 		</div>
 
 		<div class="g-row">
 			<div class="g-30">
-				<img src="img/marking3.jpg">
+				<img src="img/marking3.JPG">
 			</div>
 			<div class="g-30">
-				<img src="img/marking4.jpg">
+				<img src="img/marking4.JPG">
 			</div>
 		</div>
 	</section>
